--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Zhenliang Lu</title>
+    <title>Yang Li</title>
 </head>
 
 <body>
@@ -42,8 +42,6 @@
                 E-mail: li-y [at] ntu.edu.sg/yanglimath [at] 163.com
             </p>
             <p style="line-height: 1.5em;">
-                <!--   <a href="https://docs.google.com/gview?url=raw.githubusercontent.com/ZhenliangLu/ZhenliangLu.github.io/main/Zhenliang_CV.pdf&embedded=true">[CV]</a> 
-         -->
                 <a href="https://scholar.google.com/citations?user=GCp_zAcAAAAJ&hl=en">[Google Scholar]</a> 
                 <a href="https://dblp.org/pid/37/4190-194.html">[DBLP]</a> 
             </p>
