--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </td>
 <td id="layout-content">
     <table class="imgtable"><tr valign="top">
-        <td><img src="ly.jpg" alt="Yang Li" style="width:auto; height:12em;margin-top: 0.175em;" /></td>
+        <td><img src="ly.jpg" alt="111" style="width:auto; height:12em;margin-top: 0.175em;" /></td>
         <td align="left">
             <p><span style="font-size: 125%"><b>Yang Li (李洋)</b></span></p>
             <p
