--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="menu-item"><a href="#int">Research Interests</a></div>
      <div class="menu-item"><a href="#awards">Awards</a></div>
     <div class="menu-item"><a href="#publication">Publications</a></div>
-    <div class="menu-item"><a href="#manuscripts">Manuscripts</a></div>
-    <div class="menu-item"><a href="#patents">Patents</a></div>
+    <div class="menu-item"><a href="#preprints">Preprints</a></div>
+    <div class="menu-item"><a href="#speakers">Speakers</a></div>
     <div class="menu-item"><a href="#ser">Services</a></div>
-    <div class="menu-item"><a href="#media">Media Coverage</a></div>
+
 
 </td>
 <td id="layout-content">
