--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
             <i>The dimensions of Galois hulls of linear codes derived from an improved propagation rule and related applications</i><br>
             Dengcheng Xie, <b>Yang Li</b>, Shixin Zhu, Yuanting Zhang<br>
             <!--   <b>Finite Fields and Their Applications</b> -- 2024, 96: 102495-->
-            ournal of Applied Mathematics and Computing, https://doi.org/10.1007/s12190-025-02375-6.
+            ournal of Applied Mathematics and Computing, 2025, 71: 3699–3728.
             </p></li>            
             
             
