--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <p>
 In November 2024, I completed my successive master-doctor program at the School of Mathematics, Hefei University of Technology (HFUT, China), 
 under the supervision of Prof. Shixin Zhu. 
-I then continued my visiting scholar experience for about four months under the supervision of Prof. Shixin Zhu. 
-From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technological University under the supervision of Prof. San Ling. 
+I then continued my visiting scholar experience for about four months in HFUT. 
+From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technological University (NTU) under the supervision of Prof. San Ling. 
     <div>
         
         <h2><hr><a name="int"></a>Research Interests</h2>
