--- a/index.html
+++ b/index.html
@@ -90,10 +90,18 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
 
         <ol id="pubList" reversed>
 
+              <li><p>
+            <i>Classical codes and quantum codes involving the $\sigma$ inner product</i><br>
+            Meng Cao, <b>Yang Li</b>, Shixin Zhu<br>
+            <!--   <b>Finite Fields and Their Applications</b> -- 2024, 96: 102495-->
+            IEEE Transactions on Information Theory, 2025, Doi: 10.1109/TIT.2025.3594472. 
+            </p></li>   
+            
+
             <li><p>
             <i>Optimal, Almost optimal few-weight linear codes and related quantum codes</i><br>
             Conghui Xie, Hao Chen, Haiyan Zhou, <b>Yang Li</b>, Huimin Lao<br>
-            <!--   <b>Finite Fields and Their Applications</b> -- 2024, 96: 102495-->
+            <!--   <b>IEEE Transactions on Information Theory</b> -- 2024, 96: 102495-->
             IEEE Transactions on Information Theory, 2025, 71(6): 4250-4259. 
             </p></li>    
 
