--- a/index.html
+++ b/index.html
@@ -275,7 +275,12 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
             2024, https://arxiv.org/abs/2401.04360.
             </p></li>
-        
+
+            <li><p>
+            Properties and Decoding of Twisted GRS Codes and Their Extensions<br>
+            <b>Yang Li</b>, Martianus Frederic Ezerman, Huimin Lao, San Ling<br>
+            2025, https://doi.org/abs/2508.02382.
+            </p></li>
          </ol>
     </div> 
 
