--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
                 <b>Journals Reviewer for:</b><br>
                 MATHEMATICAL REVIEWS <br>
                 IEEE Transactions on Information Theory <br>
+                IEEE Transactions on Communications <br> 
                 Designs, Codes and Cryptography <br>
                 Cryptography and Communications <br>
                 Quantum Information Processing<br>
