--- a/index.html
+++ b/index.html
@@ -254,7 +254,14 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
             <!--(Authorship is in alphabetical order, except when the paper title is in italics)</a>-->
 
          <ol reversed>
-            
+
+            <li><p>
+            On optimal quantum LRCs from the Hermitian construction and t-designs<br>
+            <b>Yang Li</b>, Shitao Li, Huimin Lao, Gaojun Luo, San Ling<br>
+            2025, https://doi.org/abs/2508.13553.
+            </p></li>
+
+             
             <li><p>
             Properties and Decoding of Twisted GRS Codes and Their Extensions<br>
             <b>Yang Li</b>, Martianus Frederic Ezerman, Huimin Lao, San Ling<br>
