--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <!-- 引入 MathJax v3 -->
+  <script>
+    window.MathJax = {
+      tex: { inlineMath: [['$', '$'], ['\\(', '\\)']] }
+    };
+  </script>
+  <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+</head>
+</html>
+
 <html>
 
 <head>
@@ -255,6 +269,13 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
 
          <ol reversed>
 
+            <li><p>
+            On decoding extended Han-Zhang codes<br>
+            <b>Yang Li</b>, Zhenliang Lu, San Ling, Shixin Zhu, Kwok Yan Lam<br>
+            2025, https://doi.org/abs/2508.18845.
+            </p></li>
+
+            
             <li><p>
             On optimal quantum LRCs from the Hermitian construction and t-designs<br>
             <b>Yang Li</b>, Shitao Li, Huimin Lao, Gaojun Luo, San Ling<br>
