Update description of linear codes in index.html

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
         <ol id="pubList" reversed>
 
             <li><p>
-            A family of linear codes that are either new non-GRS MDS codes or NMDS codes<br>
+            A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
             IEEE Transactions on Communications, 2025, to appear. 
             </p></li>
