Update citation format in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
             <li><p>
             A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
-            IEEE Transactions on Communications, 2025, 10.1109/TCOMM.2025.3608328, to appear. 
+            IEEE Transactions on Communications, 2025, Doi: 10.1109/TCOMM.2025.3608328. 
             </p></li>
 
           
