--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
         <ol id="pubList" reversed>
 
             <li><p>
-            A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
+            <i>A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
             IEEE Transactions on Communications, 2025, Doi: 10.1109/TCOMM.2025.3608328. 
             </p></li>
