--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
         <ol id="pubList" reversed>
 
             <li><p>
-            <i>A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
+            A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
             IEEE Transactions on Communications, 2025, Doi: 10.1109/TCOMM.2025.3608328. 
             </p></li>
 
           
             <li><p>
-            <i>Classical codes and quantum codes involving the $\sigma$ inner product</i><br>
+            Classical codes and quantum codes involving the $\sigma$ inner product</i><br>
             Meng Cao, <b>Yang Li*</b>, Shixin Zhu<br>
             <!--   <b>Finite Fields and Their Applications</b> -- 2024, 96: 102495-->
             IEEE Transactions on Information Theory, 2025, Doi: 10.1109/TIT.2025.3594472. 
