--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
             Classical codes and quantum codes involving the $\sigma$ inner product</i><br>
             Meng Cao, <b>Yang Li*</b>, Shixin Zhu<br>
             <!--   <b>Finite Fields and Their Applications</b> -- 2024, 96: 102495-->
-            <b>IEEE Transactions on Information Theory/b>, 2025, Doi: 10.1109/TIT.2025.3594472. 
+            <b>IEEE Transactions on Information Theory</b>, 2025, Doi: 10.1109/TIT.2025.3594472. 
             </p></li>   
             
 
