Fix capitalization in research paper titles

--- a/index.html
+++ b/index.html
@@ -303,14 +303,14 @@ From Arpil 2025, I worked as a research fellow (postdoc) at Nanyang Technologica
 
             
             <li><p>
-            On optimal quantum LRCs from the Hermitian construction and t-designs<br>
+            On optimal quantum LRCs from the Hermitian construction and $t$-designs<br>
             <b>Yang Li</b>, Shitao Li, Huimin Lao, Gaojun Luo, San Ling<br>
             2025, https://doi.org/abs/2508.13553.
             </p></li>
 
              
             <li><p>
-            Properties and Decoding of Twisted GRS Codes and Their Extensions<br>
+            Properties and decoding of twisted GRS codes and their extensions<br>
             <b>Yang Li</b>, Martianus Frederic Ezerman, Huimin Lao, San Ling<br>
             2025, https://doi.org/abs/2508.02382.
             </p></li>
