--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       <ul>
 
             <li><p>  
-              Coding theory, Hefei University of Technology, 2022
+              Coding Theory, Hefei University of Technology, 2022
             </p></li>
             
             <li><p> 
-              Discrete mathematics, Nanyang Technological University, 2025
+              Discrete Mathematics, Nanyang Technological University, 2025
             </p></li>
     </div>
       
