--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@
                 Hebei Normal University<br>
                 Xinxiang, 28/02/2025-03/03/2025<br>
             </p></li>
+
+            <li><p>
+                Talks in NUAA, HFUT, and HFU<br>
+                Nanjing-Hefei, 01/11/2025-18/11/2025<br>
+            </p></li>
         </ol>    
     </div>
     
