--- a/index.html
+++ b/index.html
@@ -298,6 +298,13 @@
          <ol reversed>
 
             <li><p>
+            Improved bounds and optimal constructions of pure quantum locally recoverable codes<br>
+            <b>Yang Li</b>, Shitao Li, Gaojun Luo, San Ling<br>
+            2025, https://doi.org/abs/2512.07256.
+            </p></li>
+           
+
+            <li><p>
             On decoding extended Han-Zhang codes<br>
             <b>Yang Li</b>, Zhenliang Lu, San Ling, Shixin Zhu, Kwok Yan Lam<br>
             2025, https://doi.org/abs/2508.18845.
