--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <title>Yang Li</title>
 </head>
 
+
+  <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
+  
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
@@ -405,7 +409,13 @@
         </ul>
     </div>
 
+<span id="busuanzi_container_site_pv">
+    本站总访问量 <span id="busuanzi_value_site_pv"></span> 次
+</span>
 
+  <span id="busuanzi_container_site_uv">
+    本站访客数 <span id="busuanzi_value_site_uv"></span> 人
+</span>
         
 </td>
 </tr>
