--- a/index.html
+++ b/index.html
@@ -188,9 +188,16 @@
         <ol id="pubList" reversed>
 
             <li><p>
+            Four classes of wide minimal $q$-ary linear codes from a general method<br>
+            Dengcheng Xie, Shixin Zhu, <b>Yang Li*</b> <br>
+            <b>Computational and Applied Mathematics</b>, 2026, 45: 214. 
+            </p></li>
+
+          
+            <li><p>
             A family of linear codes that are either non-GRS MDS codes or NMDS codes<br>
             <b>Yang Li</b>, Zhonghua Sun, Shixin Zhu<br>
-            <b>IEEE Transactions on Communications</b>, 2025, Doi: 10.1109/TCOMM.2025.3608328. 
+            <b>IEEE Transactions on Communications</b>, 2025, 73(12): 13073-13086. 
             </p></li>
 
           
