--- a/index.html
+++ b/index.html
@@ -368,18 +368,18 @@
         <ol>
             <li><p>
                 2024 Symposium on Coding and Cryptography and Their Applications<br>
-                Air Force Engineering University<br>
+                <b>Air Force Engineering University</b>b><br>
                 Xi'an, 17/12/2024-19/12/2024<br>
             </p></li>
       
             <li><p>
                 Colloquium on Number Theory and its Applications-2025<br>
-                Hebei Normal University<br>
+                <b>Hebei Normal University</b>b><br>
                 Xinxiang, 28/02/2025-03/03/2025<br>
             </p></li>
 
             <li><p>
-                Talks in NUAA, HFUT, and HFU<br>
+                Talks in <b>NUAA</b>b>, <b>HFUT</b>b>, and <b>HFU</b>b><br>
                 Nanjing-Hefei, 01/11/2025-18/11/2025<br>
             </p></li>
         </ol>    
