--- a/index.html
+++ b/index.html
@@ -187,6 +187,11 @@
 
         <ol id="pubList" reversed>
 
+          <li><p>
+            On the insdel error-correcting capacities of binary Reed-Muller codes and Simplex codes<br>
+            Runqing Qiu, Shixin Zhu, <b>Yang Li*</b>, Zhonghua Sun <br>
+            <b>IEEE Transactions on Information Theory</b>, 2026. Doi: 10.1109/TIT.2026.3664473. 
+            </p></li>
           
             <li><p>
             Four classes of wide minimal $q$-ary linear codes from a general method<br>
