--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <li><p>
             Four classes of wide minimal $q$-ary linear codes from a general method<br>
             Dengcheng Xie, Shixin Zhu, <b>Yang Li*</b> <br>
-            <b>Computational and Applied Mathematics</b>, 2026, 45: 214. 
+            Computational and Applied Mathematics, 2026, 45: 214. 
             </p></li>
 
           
