--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
            
 
             <li><p>
-            On decoding extended Han-Zhang codes<br>
+            Unique decoding of extended subcodes of GRS codes using error-correcting pairs<br>
             <b>Yang Li</b>, Zhenliang Lu, San Ling, Shixin Zhu, Kwok Yan Lam<br>
             2025, https://doi.org/10.48550/arXiv.2508.18845.
             </p></li>
@@ -189,7 +189,7 @@
 
           <li><p>
             On the insdel error-correcting capacities of binary Reed-Muller codes and Simplex codes<br>
-            Runqing Qiu, Shixin Zhu, <b>Yang Li*</b>, Zhonghua Sun <br>
+            Runqing Qiu, Shixin Zhu, <b>Yang Li</b>, Zhonghua Sun <br>
             <b>IEEE Transactions on Information Theory</b>, 2026. Doi: 10.1109/TIT.2026.3664473. 
             </p></li>
           
